tests/errors/syn_call6.java
public class syn_call6{
public static void main(String[] args){
 method(4 )
}
}